// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading--nonce">
          Überschrift
        </strong>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading--nonce">
          Überschrift
        </strong>
        <div class="kol-card__content">
          <slot></slot>
        </div>
        <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="kol-card__close-button kol-close-button" data-testid="card-close-button"></kol-button-wc>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading--nonce">
          Überschrift
        </strong>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h1 class="kol-card__header kol-headline kol-headline--h1 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h1>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h1 class="kol-card__header kol-headline kol-headline--h1 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h1>
        <div class="kol-card__content">
          <slot></slot>
        </div>
        <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="kol-card__close-button kol-close-button" data-testid="card-close-button"></kol-button-wc>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h1 class="kol-card__header kol-headline kol-headline--h1 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h1>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h2>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h2>
        <div class="kol-card__content">
          <slot></slot>
        </div>
        <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="kol-card__close-button kol-close-button" data-testid="card-close-button"></kol-button-wc>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h2>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h3 class="kol-card__header kol-headline kol-headline--h3 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h3>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h3 class="kol-card__header kol-headline kol-headline--h3 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h3>
        <div class="kol-card__content">
          <slot></slot>
        </div>
        <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="kol-card__close-button kol-close-button" data-testid="card-close-button"></kol-button-wc>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h3 class="kol-card__header kol-headline kol-headline--h3 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h3>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h4 class="kol-card__header kol-headline kol-headline--h4 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h4>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h4 class="kol-card__header kol-headline kol-headline--h4 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h4>
        <div class="kol-card__content">
          <slot></slot>
        </div>
        <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="kol-card__close-button kol-close-button" data-testid="card-close-button"></kol-button-wc>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h4 class="kol-card__header kol-headline kol-headline--h4 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h4>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h5 class="kol-card__header kol-headline kol-headline--h5 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h5>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h5 class="kol-card__header kol-headline kol-headline--h5 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h5>
        <div class="kol-card__content">
          <slot></slot>
        </div>
        <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="kol-card__close-button kol-close-button" data-testid="card-close-button"></kol-button-wc>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h5 class="kol-card__header kol-headline kol-headline--h5 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h5>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h6 class="kol-card__header kol-headline kol-headline--h6 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h6>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h6 class="kol-card__header kol-headline kol-headline--h6 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h6>
        <div class="kol-card__content">
          <slot></slot>
        </div>
        <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="kol-card__close-button kol-close-button" data-testid="card-close-button"></kol-button-wc>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <h6 class="kol-card__header kol-headline kol-headline--h6 kol-headline--single" id="card-heading--nonce">
          Überschrift
        </h6>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc>
      <!---->
      <article aria-labelledby="card-heading--nonce" class="kol-card">
        <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading--nonce">
          Überschrift
        </strong>
        <div class="kol-card__content">
          <slot></slot>
        </div>
      </article>
    </kol-card-wc>
  </template>
</kol-card>
`;
